servers/server1/node-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  template:
    spec:
      nodeSelector:
        screepspl.us/server: server0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: screeps
spec:
  template:
    spec:
      nodeSelector:
        screepspl.us/server: server0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolbox
spec:
  template:
    spec:
      nodeSelector:
        screepspl.us/server: server0
