servers/server1/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server
spec:
  rules:
  - host: test.server1.screepspl.us
    http:
      paths:
      - backend:
          serviceName: screeps
          servicePort: http
